JSAI/error/src/test/resources/base/update_upd-empty.js
var x = {};
x.moo = "cow";
print(x.moo);

